<resources>
    <string name="app_name">Todo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="my_title">My Title</string>
    <string name="my_description">My Description</string>
    <string name="unauthorized_person">Unauthorized Person</string>
    <string name="error_image_view">Error Image View</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme :</string>
    <string name="nMode">nightModePrefs</string>
    <string name="key_isNight">isNightMode</string>

</resources>

